# phoris

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/phoris/: hardware.py  main.py
tests/: test_hardware.py
