[project]
name = "phoris"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "llama-cpp-python>=0.2.0",
    "psutil>=5.9.0",
    "huggingface-hub>=0.23.0",
]

[project.scripts]
phoris = "phoris.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phoris"]